--- a/.github/workflows/github_aws_access_key_rotation.yml
+++ b/.github/workflows/github_aws_access_key_rotation.yml
@@ -23,24 +23,24 @@ jobs:
       - name: Setup Terraform
         uses: hashicorp/setup-terraform@v1
 
-      - name: Terraform Init
-        id: init
-        run: terraform init        
-
       - name: Terraform Workspace
         working-directory: key_rotation
         id: workspace
         run: |       
           terraform init
-          terraform workspace new ${{ env.TERRAFORM_WORKSPACE}} 
-          terraform workspace select ${{ env.TERRAFORM_WORKSPACE}} && terraform init
+          terraform workspace new ${{ env.TERRAFORM_WORKSPACE }}
         continue-on-error: true     
+
+      - name: Terraform Init
+        working-directory: key_rotation
+        id: init
+        run: terraform workspace select ${{ env.TERRAFORM_WORKSPACE }} && terraform init
 
       - name: Terraform Plan
         working-directory: key_rotation
         id: plan
         if: github.event_name == 'pull_request'
-        run: terraform workspace select ${{ env.TERRAFORM_WORKSPACE}} && terraform plan -no-color -input=false
+        run: terraform workspace select ${{ env.TERRAFORM_WORKSPACE }} && terraform plan -no-color -input=false
         continue-on-error: true
 
       - name: Terraform Plan Status
@@ -52,18 +52,18 @@ jobs:
         working-directory: key_rotation
         id: apply
         if: github.ref == 'refs/heads/main' && github.event_name == 'push' && env.TERRAFORM_STATE == 'apply'
-        run: terraform workspace select ${{ env.TERRAFORM_WORKSPACE}} && terraform apply -auto-approve
+        run: terraform workspace select ${{ env.TERRAFORM_WORKSPACE }} && terraform apply -auto-approve
         continue-on-error: true
 
       - name: Terraform Apply Status
         working-directory: key_rotation
         if: steps.apply.outcome == 'failure' && env.TERRAFORM_STATE == 'apply'
         run: |
-          terraform workspace select ${{ env.TERRAFORM_WORKSPACE}} && terraform destroy -auto-approve
+          terraform workspace select ${{ env.TERRAFORM_WORKSPACE }} && terraform destroy -auto-approve
           exit 1
       - name: Terraform Destroy
         working-directory: key_rotation
         id: destroy
         if: github.ref == 'refs/heads/main' && github.event_name == 'push' && env.TERRAFORM_STATE == 'destroy'
         run: | 
-          terraform workspace select ${{ env.TERRAFORM_WORKSPACE}} && terraform destroy -auto-approve
+          terraform workspace select ${{ env.TERRAFORM_WORKSPACE }} && terraform destroy -auto-approve
