--- a/.github/workflows/github_aws_access_key_rotation.yml
+++ b/.github/workflows/github_aws_access_key_rotation.yml
@@ -14,7 +14,7 @@ jobs:
       AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
       AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
       TERRAFORM_WORKSPACE: github-aws-key-rotation
-      TERRAFORM_STATE: apply
+      TERRAFORM_STATE: destroy
 
     steps:
       - name: Checkout
